resolve sass mixed-decls deprecation warnings in spacing.scss

--- a/src/secureroot/v6-css/scss/base/core/tools/spacing.scss
+++ b/src/secureroot/v6-css/scss/base/core/tools/spacing.scss
@@ -111,16 +111,24 @@
       // [3] //
 
       @if $direction == all {
+        & {
         #{$property}: $breakpoint-value iff($important, !important);
+        }
       } @else {
+        & {
         #{$property}-#{$direction}: $breakpoint-value iff($important, !important);
+        }
       }
     } @else {
       @include govuk-media-query($from: $breakpoint) {
         @if $direction == all {
+          & {
           #{$property}: $breakpoint-value iff($important, !important);
+          }
         } @else {
+          & {
           #{$property}-#{$direction}: $breakpoint-value iff($important, !important);
+          }
         }
       }
     }
